manifests/clipper/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clipper
  namespace: clipper
spec:
  ingressClassName: traefik
  rules:
    - host: clipper.nebula.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
